Fixed article layout problem, that index future section img can be click to article page

--- a/css/article.css
+++ b/css/article.css
@@ -28,6 +28,8 @@
   margin-top: 100px;
   font-size: 1.8rem;
   line-height: 3.2rem;
+  max-width: 1200px;
+  width: 100%;
 }
 
 #main p {
@@ -76,19 +78,24 @@ iframe {
   #main img.top {
     width: 70%;
   }
+
   #main .title {
     font-size: 2.6rem;
   }
+
   #main .rowBg {
     height: 70vh;
   }
+
   #main .content {
     margin-top: -70vh;
   }
+
   #main .title {
     font-size: 2.2rem;
     margin-bottom: 60px;
   }
+
   #main .small {
     width: 90%;
   }
@@ -98,18 +105,23 @@ iframe {
   #main .border {
     font-size: 1.6rem;
   }
+
   #main p {
     font-size: 1.4rem;
   }
+
   #main .blod {
     font-size: 2rem;
   }
+
   #main .rowBg {
     height: 60vh;
   }
+
   #main .content {
     margin-top: -53vh;
   }
+
   #main .title {
     font-size: 2rem;
   }
@@ -119,12 +131,15 @@ iframe {
   #main .border {
     font-size: 1.4rem;
   }
+
   #main p {
     font-size: 1.2rem;
   }
+
   #main .blod {
     font-size: 1.8rem;
   }
+
   #main img {
     width: 80%;
   }
@@ -134,25 +149,32 @@ iframe {
   #main .title {
     font-size: 1.8rem;
   }
+
   #main img.top {
     width: 80%;
   }
+
   #main .border {
     line-height: 2.7rem;
   }
+
   #main p {
     line-height: 2.3rem;
   }
+
   #main img {
     margin-bottom: 70px;
   }
+
   #main p {
     margin-bottom: 60px;
   }
+
   #main .small {
     font-size: 1.1rem;
     margin-bottom: 40px;
   }
+
   #main .marginTop {
     margin-top: -40px;
   }
@@ -164,16 +186,20 @@ iframe {
     line-height: 2.5rem;
     margin-top: 40px;
   }
+
   #main p {
     line-height: 2.1rem;
     font-size: 1rem;
   }
+
   #main .small {
     font-size: 0.9rem;
   }
+
   #main .blod {
     font-size: 1.5rem;
   }
+
   #main .title {
     width: 80%;
   }
@@ -183,19 +209,24 @@ iframe {
   #main .content {
     margin-top: -50vh;
   }
+
   #main p {
     margin-bottom: 40px;
   }
+
   #main img {
     margin-bottom: 50px;
   }
+
   #main .border {
     line-height: 2.3rem;
     margin-top: 40px;
   }
+
   #main .marginTop {
     margin-top: -26px;
   }
+
   #main .small {
     word-break: break-all;
     margin-top: -30px;
@@ -206,6 +237,7 @@ iframe {
   #main .rowBg {
     height: 55vh;
   }
+
   #main .content {
     margin-top: -45vh;
   }
@@ -215,12 +247,15 @@ iframe {
   #main .title {
     font-size: 1.6rem;
   }
+
   #main .rowBg {
     height: 50vh;
   }
+
   #main .content {
     margin-top: -40vh;
   }
+
   #main .border {
     padding-left: 24px;
     font-size: 1.1rem;
@@ -232,6 +267,7 @@ iframe {
   #main img.top, #main .title {
     width: 90%;
   }
+
   #main p {
     font-size: .9rem;
   }
